@@ -1,4 +1,10 @@
 
+2024-04-25  Boris Eng <boris.eng@ocamlpro.com>
+
+	* cobc.h, pplex.l, ppparse.y: new >>IMP INCLUDE directive to include
+	  multiple header files in the C generated code. Has the same behavior as the
+	  --include compiler option.
+
 2024-04-24  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>
 
 	* replace.c: optimize speed and memory usage. For speed, we add two
@@ -8,6 +14,12 @@
 	  ones passed internally from the copy-replacing stream to the
 	  replace stream) and we use a circular buffer for the temporary
 	  queue of tokens instead of a list.
+
+2024-04-25  Boris Eng <boris.eng@ocamlpro.com>
+
+	* pplex.l, ppparse.y, scanner.l, cobc.h, codegen.c:
+	  new >>IMP INCLUDE directive to include one or multiple header files in
+	  the generated C code (same behavior as the --include compiler option)
 
 2024-03-17  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>
 	    Emilien Lemaire <emilien.lemaire@ocamlpro.com>
